--- a/preamble.tex
+++ b/preamble.tex
@@ -405,5 +405,5 @@
 \DeclareMathOperator{\AG}{AG}
 \DeclareMathOperator{\pl}{pl}
 \newcommand{\rr}{\hyperref[eq:rotation-rule]{rotation rule}}
-\newcommand{\ter}{\mathbb T}
+\newcommand{\ter}{\block R}
 \definecolor{lightblue}{RGB}{120, 220, 255}
