--- a/preamble.tex
+++ b/preamble.tex
@@ -405,5 +405,6 @@
 \DeclareMathOperator{\AG}{AG}
 \DeclareMathOperator{\pl}{pl}
 \newcommand{\rr}{\hyperref[eq:rotation-rule]{rotation rule}}
+\newcommand{\qr}{\hyperref[rem:quad-rule]{quad rule}}
 \newcommand{\ter}{\block R}
 \definecolor{lightblue}{RGB}{120, 220, 255}
